--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,81 @@
-/* VARIABLES */
+/* CONSTANTS */
 :root {
     --primary-light: #ededed;
     --secondary-light: #fefefe;
     --primary-dark: #222832;
     --secondary-dark: #060f2e;
+}
+
+html {
+    /* footer support */
+    position: relative;
+    min-height: 100%;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  
+  body {
+    background-color: var(--primary-light);
+    color: var(--primary-dark);
+    font-family: 'Roboto', sans-serif;
+    line-height: 1.6;
+    /* footer support */
+    margin-bottom: 100px;
+  }
+
+/* HEADER */
+#header {
+    text-align: center;
+    margin-bottom: 48px;
+}
+
+h1 {
+    color: var(--primary-dark);
+    line-height: 1.2;
+    text-align: center;
+    font-size: 80px;
+}
+
+/* MAIN */
+#calculator-container {
+    justify-content: center;
+    align-items: center;
+    max-width: 480px;
+    max-height: 600px;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+}
+
+#display {
+    background-color: #060f2e;
+    color: var(--primary-light);
+    padding: 12px;
+    font-size: 36px;
+    text-align: right;
+}
+
+button {
+    height: 80px;
+}
+
+#buttons {
+    background-color: #999;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+#equals {
+    background-image: linear-gradient(to bottom, #fe886a, #ff7033);
+    height: 320px;
+    grid-column: -2;
+    grid-row: 2 / span 4;
 }
 
 /* FOOTER */
