Increase font size of buttons and add functions
Function to resetScreen when the screen should start with that first
input or when screen should be reset has been added as well as required
variables.

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ button {
     grid-template-columns: repeat(4, 1fr);
 }
 
+.btn {
+  font-size: 24px;
+}
+
 #equals {
     background-image: linear-gradient(to bottom, #fe886a, #ff7033);
     height: 320px;
